jf-table-view: Fix ellipsis and tooltip-on-overflow for cell templates

--- a/src/ui_components/jf_table_view/jf-table-view.less
+++ b/src/ui_components/jf_table_view/jf-table-view.less
@@ -309,5 +309,10 @@
       }
     }
   }
+  .overflow-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
